fixed getting the right data, passing to the map, map not showing

--- a/Leaflet-Step-1/static/css/style.css
+++ b/Leaflet-Step-1/static/css/style.css
@@ -3,3 +3,6 @@
     padding: 0;
     margin: 0;
   }
+body {
+  padding-top: 10em;
+}
